--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
 
     <body>
         <h1>Hello World!</h1>
+        <h2>Hello World!</h2>
+        <h3>Hello World!</h3>
+        <h4>Hello World!</h4>
+        <h5>Hello World!</h5>
+        <h6>Hello World!</h6>
+
+        <p>This is a paragraph (not really)</p>
+
+        <!-- <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <br> Culpa error veniam et neque adipisci atque ipsa quo molestiae cupiditate, laborum a. 
+            <br> Reprehenderit maiores doloremque voluptate quis reiciendis neque, voluptatem harum ratione obcaecati sunt quidem omnis et, laboriosam ducimus dignissimos vero sint. 
+            <br> Eligendi dolorem, et aperiam alias, dolor id maxime cum tempore possimus consequatur nemo, minima tempora dicta! 
+            <br> Voluptatibus atque illo dolore cum sunt perspiciatis quae fugit, asperiores non ullam architecto vel velit quo! 
+            <br> Temporibus iste commodi consequuntur repudiandae! Ut numquam odit inventore quos unde soluta eos aliquid voluptas hic repellat consequatur recusandae ipsam, illum nobis a. 
+            <br> Minima iure eum aliquam?
+        </p> -->
+
+        <p><b>this is bold text</b></p>
+        <p><i>this is italic text</i></p>
+        <p><u>this is underlined text</u></p>
+
+        <img src="https://i.pinimg.com/550x/fd/88/d4/fd88d44dd64cf91fdfb22b93bf65373a.jpg" alt="cat in a field">
+        <img src="./img/catpic.jpeg">
     </body>
 </html>
