--- a/ReferenceIndex.html
+++ b/ReferenceIndex.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Website</title>
-        <link rel="stylesheet" href="./ReferenceStyle.css">
+        <link rel="stylesheet" href="./style/ReferenceStyle.css">
     </head>
 
     <body>
