--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,13 +18,24 @@
         <li>Milk</li>
     </ol> -->
 
-    <div id="navbar">
-        <div class="left-nav-container">
+    <div class="flex-row" id="navbar">
+        <div class="left-nav-container flex-row">
             <img src="../img/catpic.jpeg">
             <p>trottinger25@pascack.org  |  (201) 331-0831</p>
         </div>
         <div>
-            <button><img src="../icons/menu.svg"></button>
+            <button class="hamburger-button"><img src="../icons/menu.svg"></button>
+        </div>
+    </div>
+
+    <div class="header-container flex-row">
+        <h1>
+            Projects
+        </h1>
+        <div class="page-nav flex-row">
+            <button class="arrow-button"><img src="../icons/arrow-left.svg"></button>
+            <p>current page / pages</p>
+            <button class="arrow-button"><img src="../icons/arrow-right.svg"></button>
         </div>
     </div>
 
