--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="../style/project-style.css">
+    <script src="../script/script.js" defer></script>
 </head>
 <body>
     <!-- <ul style="list-style-type: square;">
@@ -36,6 +37,136 @@
             <button class="arrow-button"><img src="../icons/arrow-left.svg"></button>
             <p>current page / pages</p>
             <button class="arrow-button"><img src="../icons/arrow-right.svg"></button>
+        </div>
+    </div>
+
+    <div class="page flex-column" id="page-0">
+        <div class="section-1 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title
+            </h3>
+
+            <p class="description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum, ea!
+            </p>
+        </div>
+        <hr>
+        <div class="section-2 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 2
+            </h3>
+
+            <p class="description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, unde!
+            </p>
+        </div>
+        <hr>
+        <div class="section-3 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 3
+            </h3>
+
+            <p class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, tempora.
+            </p>
+        </div>
+    </div>
+    <div class="page flex-column hidden" id="page-1">
+        <div class="section-1 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 4
+            </h3>
+
+            <p class="description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, vitae?
+            </p>
+        </div>
+        <hr>
+        <div class="section-2 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 5
+            </h3>
+
+            <p class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, ea.
+            </p>
+        </div>
+        <hr>
+        <div class="section-3 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 6
+            </h3>
+
+            <p class="description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, at.
+            </p>
+        </div>
+    </div>
+    <div class="page flex-column hidden" id="page-2">
+        <div class="section-1 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 7
+            </h3>
+
+            <p class="description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, maiores.
+            </p>
+        </div>
+        <hr>
+        <div class="section-2 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 8
+            </h3>
+
+            <p class="description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, laborum.
+            </p>
+        </div>
+        <hr>
+        <div class="section-3 flex-row">
+            <p class="year-range">
+                2022 - 2024
+            </p>
+
+            <h3 class="project-title">
+                Title 9
+            </h3>
+
+            <p class="description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, debitis!
+            </p>
         </div>
     </div>
 
