--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,9 +34,9 @@
             Projects
         </h1>
         <div class="page-nav flex-row">
-            <button class="arrow-button"><img src="../icons/arrow-left.svg"></button>
+            <button class="arrow-button"><img src="../icons/arrow-left.svg" onclick="nextPage()"></button>
             <p>current page / pages</p>
-            <button class="arrow-button"><img src="../icons/arrow-right.svg"></button>
+            <button class="arrow-button"><img src="../icons/arrow-right.svg" onclick="prevPage()"></button>
         </div>
     </div>
 
