--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,13 +19,24 @@
         <li>Milk</li>
     </ol> -->
 
+    <div class="hidden" id="sidebar-nav">
+        <button id="sidebar-nav-close" onclick="toggleNav()"><img src="../icons/close.svg"></button>
+        <div class="flex-column">
+            <a href="./about.html"><button>About Me</button></a>
+            <a href="./projects.html"><button>My Projects</button></a>
+            <a href="./contact.html"><button>Contact Me</button></a>
+        </div>
+    </div>
+
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
-            <img src="../img/catpic.jpeg">
+            <a href="../index.html">
+                <img src="../img/catpic.jpeg">
+            </a>
             <p>trottinger25@pascack.org  |  (201) 331-0831</p>
         </div>
         <div>
-            <button class="hamburger-button"><img src="../icons/menu.svg"></button>
+            <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
         </div>
     </div>
 
@@ -34,13 +45,19 @@
             Projects
         </h1>
         <div class="page-nav flex-row">
-            <button class="arrow-button"><img src="../icons/arrow-left.svg" onclick="prevPage()"></button>
+            <button class="arrow-button" onclick="prevPage()">
+                <img src="../icons/arrow-left.svg">
+            </button>
+
             <p>current page / pages</p>
-            <button class="arrow-button"><img src="../icons/arrow-right.svg" onclick="nextPage()"></button>
+
+            <button class="arrow-button" onclick="nextPage()">
+                <img src="../icons/arrow-right.svg">
+            </button>
         </div>
     </div>
 
-    <div class="page flex-column" id="page-0">
+    <div class="page" id="page-0">
         <div class="section-1 flex-row">
             <p class="year-range">
                 2022 - 2024
@@ -83,7 +100,7 @@
             </p>
         </div>
     </div>
-    <div class="page flex-column hidden" id="page-1">
+    <div class="page hidden" id="page-1">
         <div class="section-1 flex-row">
             <p class="year-range">
                 2022 - 2024
@@ -126,7 +143,7 @@
             </p>
         </div>
     </div>
-    <div class="page flex-column hidden" id="page-2">
+    <div class="page hidden" id="page-2">
         <div class="section-1 flex-row">
             <p class="year-range">
                 2022 - 2024
