--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,18 +8,7 @@
     <script src="../script/script.js" defer></script>
 </head>
 <body>
-    <!-- <ul style="list-style-type: square;">
-        <li>Something</li>
-        <li>Something else</li>
-        <li>Something else else</li>
-    </ul>
-    <ol style="list-style-type:lower-greek;">
-        <li>Carrots</li>
-        <li>Cheese</li>
-        <li>Milk</li>
-    </ol> -->
-
-    <div class="hidden" id="sidebar-nav">
+    <div class="" id="sidebar-nav">
         <button id="sidebar-nav-close" onclick="toggleNav()"><img src="../icons/close.svg"></button>
         <div class="flex-column">
             <a href="./about.html"><button>About Me</button></a>
