JS for page numbers

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,7 +38,7 @@
                 <img src="../icons/arrow-left.svg">
             </button>
 
-            <p>current page / pages</p>
+            <p><span id="current-page">1</span> / <span id="total-pages">3</span></p>
 
             <button class="arrow-button" onclick="nextPage()">
                 <img src="../icons/arrow-right.svg">
